project/logs/20250715_104751.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Object3d.PS.hlsl,profike:ps_6_0

Object3d.PS.hlsl:40:16: error: redefinition of 'textureColor'
    float32_t4 textureColor = gTexture.Sample(gSampler, transformdUV.xy);
               ^
Object3d.PS.hlsl:38:16: note: previous definition is here
    float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
               ^

